# Jigg_copy

./: .mxproject  CMakeLists.txt  Makefile  MarvelTestingJig.ioc  flashAllFirmware.bat
Core/Inc/: can.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: can.c  gpio.c  main.c  monitor.c  stm32l4xx_it.c  usart.c
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_can.h  stm32l4xx_hal_conf_template.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_can.c
xpack-openocd-0.11.0-4/: MarvelTestingJig.code-workspace
